add 2line comment

--- a/weather/webh.html
+++ b/weather/webh.html
@@ -77,7 +77,8 @@
 
         var xhr = new XMLHttpRequest();
         //원형 url, key원형
-        
+        //api 주소
+        //api key값
         
         var url3 = url + 'getVilageFcst' //초단기실황조회
         var key3 = key;
