--- a/weather/webh.html
+++ b/weather/webh.html
@@ -44,13 +44,14 @@
                     꿈을 향해 나아가고 있습니다.
                     대학교 졸업할때 쯤이면 고급 프로그래머가 될겁니다.
                 </p>
-                </pre>
             </div>
+        </div>
+        <div id="show-weather-container">
         </div>
     </div>
     <script src="webj.js"></script>
     <script src="digit-clock.js"></script>
-    
+    <script src="showFire.js"></script>
 </body>
 
 </html>
